# dronecan_application

./: .sonarcloud.properties  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  dcnode.cmake  dronecan.cmake  libdcnode.cmake  sonar-project.properties
.github/workflows/: build.yml  check_crlf.yml  code_style.yml
Libs/libcanard_v0/: canard.c  canard.h
application/: dronecan.c  dronecan.h  dronecan_application_internal.h  uavcan.c  uavcan.h  uavcan_application.c  uavcan_application.h  weak.c
cmake/: AddLibparams.cmake
examples/stm32_hal/: hal.cpp
examples/ubuntu/: CMakeLists.txt  lights.hpp  main.cpp  params.cpp  params.hpp
examples/ubuntu/minimal/: CMakeLists.txt  README.md  main.cpp
examples/ubuntu/publisher/circuit_status/: CMakeLists.txt  main.cpp
examples/ubuntu/publishers/: circuit_status.hpp
examples/ubuntu/subscriber/commands/: CMakeLists.txt  README.md  main.cpp
examples/ubuntu/subscriber/lights_command/: CMakeLists.txt  main.cpp
examples/ubuntu/subscribers/: array_command.hpp  lights.hpp  raw_command.hpp
examples/ubuntu_minimal/: CMakeLists.txt  main.cpp  main.h  params.cpp
examples/ubuntu_publisher_circuit_status/: CMakeLists.txt  README.md  main.cpp
examples/ubuntu_subscriber_commands/: CMakeLists.txt  README.md  main.cpp
include/application/: can_driver.h  dronecan.h  dronecan_application_internal.h  params.h
include/dcnode/: can_driver.h  data_types.hpp  dcnode.h  logger.hpp  publisher.hpp  subscriber.hpp
include/dcnode/serialization/: serialization_internal.h
include/dcnode/serialization/uavcan/: CoarseOrientation.h
include/dcnode/serialization/uavcan/protocol/: get_node_info.h  get_transport_stats.h  node_status.h  restart_node.h
include/libdcnode/: can_driver.h  dronecan.h  internal.h  logger.hpp  params.h  publisher.hpp  serialization_internal.h  subscriber.hpp  version.h
include/libdcnode/dronecan/sensors/hygrometer/: Hygrometer.h
include/libdcnode/uavcan/: CoarseOrientation.h
include/libdcnode/uavcan/equipment/actuator/: ArrayCommand.h  Status.h
include/libdcnode/uavcan/equipment/ahrs/: MagneticFieldStrength.h  MagneticFieldStrength2.h  RawImu.h  Solution.h
include/libdcnode/uavcan/equipment/air_data/: IndicatedAirspeed.h  RawAirData.h  StaticPressure.h  StaticTemperature.h  TrueAirspeed.h
include/libdcnode/uavcan/equipment/camera_gimbal/: Status.h
include/libdcnode/uavcan/equipment/device/: Temperature.h
include/libdcnode/uavcan/equipment/esc/: RawCommand.h  Status.h
include/libdcnode/uavcan/equipment/gnss/: ECEFPositionVelocity.h  Fix2.h
include/libdcnode/uavcan/equipment/hardpoint/: Command.h  Status.h
include/libdcnode/uavcan/equipment/ice/: FuelTankStatus.h  Status.h
include/libdcnode/uavcan/equipment/indication/: BeepCommand.h  LightsCommand.h
include/libdcnode/uavcan/equipment/power/: BatteryInfo.h  CircuitStatus.h
include/libdcnode/uavcan/equipment/range_sensor/: Measurement.h
include/libdcnode/uavcan/equipment/safety/: ArmingStatus.h
include/libdcnode/uavcan/protocol/: get_node_info.h  get_transport_stats.h  node_status.h  restart_node.h
include/libdcnode/uavcan/protocol/debug/: LogMessage.h
include/libdcnode/uavcan/protocol/param/: execute_opcode.h  getset.h
include/serialization/: logger.hpp  logging.h  publisher.hpp  subscriber.hpp
include/serialization/dronecan/sensors/hygrometer/: Hygrometer.h
include/serialization/uavcan/: CoarseOrientation.h
include/serialization/uavcan/equipment/actuator/: ArrayCommand.h
include/serialization/uavcan/equipment/ahrs/: MagneticFieldStrength.h  MagneticFieldStrength2.h  RawImu.h  Solution.h
include/serialization/uavcan/equipment/air_data/: IndicatedAirspeed.h  RawAirData.h  StaticPressure.h  StaticTemperature.h  TrueAirspeed.h
include/serialization/uavcan/equipment/camera_gimbal/: Status.h
include/serialization/uavcan/equipment/device/: Temperature.h
include/serialization/uavcan/equipment/esc/: RawCommand.h  Status.h
include/serialization/uavcan/equipment/gnss/: ECEFPositionVelocity.h  Fix2.h
include/serialization/uavcan/equipment/hardpoint/: Command.h  Status.h
include/serialization/uavcan/equipment/ice/: FuelTankStatus.h  Status.h
include/serialization/uavcan/equipment/indication/: BeepCommand.h  LightsCommand.h  RGB565.h
include/serialization/uavcan/equipment/power/: BatteryInfo.h  CircuitStatus.h
include/serialization/uavcan/equipment/range_sensor/: Measurement.h
include/serialization/uavcan/equipment/safety/: ArmingStatus.h
include/serialization/uavcan/protocol/: get_node_info.h  node_status.h  restart_node.h
libs/libcanard_v0/: canard.c  canard.h  canard_build_config.h
libs/serialization/uavcan/: CoarseOrientation.h
libs/serialization/uavcan/protocol/: get_node_info.h  node_status.h
platform_specific/bxcan/: can_driver.c  canard_stm32.c  config.cmake
platform_specific/fdcan/: can_driver.c  config.cmake
platform_specific/socketcan/: can_driver.c  config.cmake  socketcan.c  socketcan.h
platform_specific/socketcan/socketcan/: can_driver.c  socketcan.c
platform_specific/stm32_bxcan/: can_driver.c  canard_stm32.h
platform_specific/stm32_fdcan/: can_driver.c
scripts/code_style/: check_astyle.py  check_crlf.sh  cppcheck.sh
serialization/: serialization_internal.h
serialization/uavcan/equipment/actuator/: ArrayCommand.h  Status.h
serialization/uavcan/equipment/esc/: RawCommand.h  Status.h
serialization/uavcan/equipment/hardpoint/: Command.h  Status.h
serialization/uavcan/equipment/ice/: FuelTankStatus.h
serialization/uavcan/equipment/indication/: BeepCommand.h  LightsCommand.h  RGB565.h  SingleLightCommand.h
serialization/uavcan/equipment/power/: BatteryInfo.h  CircuitStatus.h
serialization/uavcan/equipment/range_sensor/: Measurement.h
serialization/uavcan/equipment/temperature/: Temperature.h
serialization/uavcan/protocol/: get_node_info.h  get_transport_stats.h  node_status.h
serialization/uavcan/protocol/debug/: LogMessage.h
serialization/uavcan/protocol/param/: execute_opcode.h  getset.h
src/: dcnode.cpp  dronecan.c  logger.cpp  weak.c
(+50 files in other folders)
